<resources>
    <string name="app_name">Cliente Fiel</string>
    <string name="action_settings">Settings</string>



    <string name="btn_login">Inicia sesión</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_registro">Crear una cuenta</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_verDescuentos">Mis Descuentos</string>

    <string name="name">Fullname</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_Descuento">Codigo de Descuento</string>

    <string name="hint_name">Nombres</string>
    <string name="hint_lastname">Apellidos</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_cuenta">Cuenta</string>
    <string name="hint_Confirma_password">Confirmar Contraseña</string>
    <string name="hint_descripcion_empresa">Descripción Empresa</string>

    <string name="hint_nombre_empresa">Nombre empresa</string>



    <string name="action_add_menu">Adicionar</string>
    <string name="action_edit">Editar</string>
    <string name="action_help">Ayuda</string>
    <string name="action_about">Acerca de</string>





</resources>
