<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/btnUsuarioRegistro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_usuario"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorTextPrincipal"
            android:textColorHint="@color/colorTextHintPrincipal" />

    <EditText
        android:id="@+id/btnNombreRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorTextPrincipal"
        android:textColorHint="@color/colorTextHintPrincipal" />

    <EditText
        android:id="@+id/btnApellidoRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/hint_lastname"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorTextPrincipal"
        android:textColorHint="@color/colorTextHintPrincipal" />

        <EditText
            android:id="@+id/btnCorreoRegistro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorTextPrincipal"
            android:textColorHint="@color/colorTextHintPrincipal" />

        <EditText
            android:id="@+id/btnPassRegistro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorTextPrincipal"
            android:textColorHint="@color/colorTextHintPrincipal" />


        <EditText
            android:id="@+id/btnConfirmarPassRegistro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_Confirma_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorTextPrincipal"
            android:textColorHint="@color/colorTextHintPrincipal" />

        <Button
            android:id="@+id/btnGuardaRegistro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/bg_btn_principal"
            android:text="@string/btn_registrarse"
            android:textColor="@color/btn_principal" />
    </LinearLayout>
</LinearLayout>